# ShellPreter

./: .gitignore  CMakeLists.txt  readme.md  shellpreter.cpp
include/: shell_interpreter.hpp
src/: main.cpp  shell_interpreter.cpp
test/: shell_interpreter_test.cpp
